--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -26,6 +26,10 @@
     <string name="account_manager_type_legacy_imap">com.android.email</string>
     <string name="account_manager_type_pop3">com.android.email</string>
     <string name="account_name_toast">Nome già esistente, rinominare</string>
+    <string name="account_options_acc_title">Account</string>
+    <string name="account_options_common_title">Impostazioni comuni</string>
+    <string name="account_options_only_title">Scarica header solo su rete dati mobile</string>
+    <string name="account_options_sync_title">Impostazioni di sincronizzazione</string>
     <string name="account_password_spaces_error">Questa password inizia o termina con uno o più spazi. Molti server non supportano le password contenenti spazi.</string>
     <string name="account_security_dialog_content_fmt">"%s richiede l'aggiornamento delle impostazioni di sicurezza."</string>
     <string name="account_security_dialog_title">Aggiornamento sicurezza</string>
@@ -176,6 +180,7 @@
     <string name="account_setup_outgoing_username_label">Nome utente</string>
     <string name="account_setup_security_policies_required_fmt">"Il server %s richiede che tu consenta il controllo remoto di alcune funzionalità di sicurezza del tuo dispositivo Android. Completare la configurazione dell'account?"</string>
     <string name="account_setup_security_required_title">Amministrazione sicurezza da remoto</string>
+    <string name="account_setup_server_acc_manager_title">Gestione account</string>
     <string name="account_setup_service_not_set">Le impostazioni del tuo account non sono ancora state configurate</string>
     <string name="account_setup_username_password_toast">Digita un indirizzo email e una password validi.</string>
     <string name="account_setup_username_uneditable_error">Non è possibile modificare il nome utente di un account. Per aggiungere un account con un altro nome utente, tocca Aggiungi account.</string>
@@ -380,6 +385,7 @@
     <string name="download_confirm_message">"Per aprire questo file devi scaricare l'allegato da 180K %1$s"</string>
     <string name="download_confirm_title">Conferma download</string>
     <string name="download_failed">Download non riuscito. Tocca per riprovare.</string>
+    <string name="download_show_image">Scarica e mostra immagine</string>
     <string name="downloading_message_body">Download email, attendere prego…</string>
     <string name="draft_count_format"> (%1$s)</string>
     <string name="drawer_close">Chiudi pannello di navigazione</string>
@@ -451,10 +457,15 @@
     <string name="general_preference_text_zoom_small">Testo piccolo</string>
     <string name="general_preference_text_zoom_tiny">Testo molto piccolo</string>
     <string name="generic_attachment_problem">Impossibile allegare il file.</string>
-    <string name="header_category_account">Im postazioni account</string>
+    <string name="head_only_enable_dialog_message">Solo il titolo (instead of the whole email) is downloaded without click under traffic.</string>
+    <string name="head_only_enable_dialog_nagative">Rifiuta</string>
+    <string name="head_only_enable_dialog_positive">Accetta</string>
+    <string name="head_only_enable_dialog_title">Risparmio traffico</string>
+    <string name="header_category_account">Account</string>
     <string name="header_category_other">Altro</string>
     <string name="header_label_general_preferences">Generali</string>
     <string name="help_and_info">Guida</string>
+    <string name="hide_atts_remaining">Nascondi %1$d allegati</string>
     <string name="hide_elided">▼ Nascondi testo citato</string>
     <string name="hide_folders">Nascondi cartelle</string>
     <string name="hierarchical_folder_parent_top">%1$s∕%2$s∕</string>
@@ -471,12 +482,13 @@
     <string name="intent_exchange_package">com.android.exchange</string>
     <string name="invalid_recipient">Indirizzo non valido.</string>
     <string name="kilobytes">%s KB</string>
-	<string name="load_from_remote">Continua a cercare sul server</string>
+    <string name="load_from_remote">Continua a cercare sul server</string>
     <string name="load_more">Carica altro</string>
     <string name="loading_conversation">Caricamento…</string>
     <string name="loading_conversations">Caricamento…</string>
+    <string name="loading_from_remote">Ricerca…</string>
     <string name="local_search">Ricerca locale</string>
-	<string name="local_search_result">%s email trovate sul tuo dispositivo.</string>
+    <string name="local_search_result">%s email trovate sul tuo dispositivo.</string>
     <string name="login">Accedi</string>
     <string name="login_failed_ticker">Accesso a %s non riuscito.</string>
     <string name="login_failed_title">Accesso non riuscito</string>
@@ -569,7 +581,9 @@ CC: %4$s
     <string name="message_saved">Messaggio salvato come bozza.</string>
     <string name="message_type_name">Messaggio</string>
     <string name="message_view_attachment_background_load">"Nota. Prima dell'invio verranno scaricati uno o più allegati del messaggio inoltrato."</string>
+    <string name="more_atts_remaining">%1$d rimanenti</string>
     <string name="more_atts_total">%1$d allegati</string>
+    <string name="more_context">Altro</string>
     <string name="more_info_attachment">Informazioni</string>
     <string name="more_string">+%1$s</string>
     <string name="more_than_999">999+</string>
@@ -584,6 +598,7 @@ CC: %4$s
     <string name="next_action">Avanti</string>
     <string name="no">No</string>
     <string name="no_application_found">Nessuna applicazione può aprire questo allegato per la visualizzazione.</string>
+    <string name="no_contacts">Nessun contatto.</string>
     <string name="no_conversations">Nessun messaggio.</string>
     <string name="no_mails">Nessuna mail</string>
     <string name="no_matched_attachment">Nessun allegato corrispondente!</string>
@@ -631,6 +646,9 @@ CC: %4$s
     <string name="perference_change_pw">Aggiorna password</string>
     <string name="perference_change_pw_notnull_tips">La password non può essere vuota</string>
     <string name="perference_change_pw_ok_tips">Password aggiornata con successo</string>
+    <string name="perference_setup_pop_del">Rimuovi email dal server</string>
+    <string name="perference_setup_recv_tag">Server posta in arrivo</string>
+    <string name="perference_setup_send_tag">Server posta in uscita</string>
     <string name="permission_access_provider_desc">Consente a questa applicazione di accedere al database della tua posta, inclusi i messaggi ricevuti e inviati, i nomi utente e le password.</string>
     <string name="permission_access_provider_label">Accesso ai dati del provider di posta</string>
     <string name="permission_read_attachment_desc">"Consente all'applicazione di leggere i tuoi allegati email."</string>
@@ -673,8 +691,11 @@ CC: %4$s
     <string name="pop3_name">POP3</string>
     <string name="prefDialogTitle_conversationListIcon">Immagine mittente</string>
     <string name="prefDialogTitle_removal_action">Archivio e operazioni cancellate</string>
+    <string name="preference_eas_tips">"La pagina di attivazione in arrivo è richiesta dal server email, resta in attesa dell'attivazione."</string>
     <string name="preference_head_load_description">Scarica solo i titoli delle email, quando stai utilizzano i dati mobili.</string>
     <string name="preference_head_load_title">Riduci utilizzo dati</string>
+    <string name="preference_imap_tips" />
+    <string name="preference_pop_tips">Gli allegati verranno scaricati inseme alle email come previsto dal protocollo POP3. Fai attenzione quando utilizzi la connessione dati mobile.</string>
     <string name="preference_removal_action_title">Archivio e operazioni cancellate</string>
     <string name="preference_sender_image_description">Mostra a fianco al nome nella lista</string>
     <string name="preference_sender_image_title">Immagine mittente</string>
