--- a/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
@@ -440,14 +440,9 @@
     <string name="select_image">Seleziona foto</string>
     <string name="select_video">Seleziona video</string>
     <string name="select_item">Seleziona elemento</string>
-    <string name="select_album">Seleziona album</string>
-    <string name="set_image">Imposta foto come</string>
     <string name="camera_setas_wallpaper">Sfondo</string>
     <string name="delete">Elimina</string>
     <string name="confirm_delete">Confermare la cancellazione di %s file?</string>
-    <string name="confirm_delete_home_merge_item">Eliminare %s immagine(i) sia in locale che in cloud?</string>
-    <string name="action_fail_unknown_error">Operazione fallita a causa di un errore sconosciuto.</string>
-    <string name="add_to_cloud_fail_too_many_items">Impossibile completare operazione, troppi elementi selezionati</string>
     <string name="comfirm_delete_current_album">Eliminare questo album?</string>
     <string name="confirm_delete_album" formatted="false">Sicuro di voler eliminare %s album (contenenti %s elementi)?</string>
     <string name="confirm_delete_system_album">%s è un album di sistema, sicuro di volerlo eliminare?</string>
@@ -460,10 +455,6 @@
     <string name="confirm_delete_has_cloud_local_image_video">Eliminare %s elemento(i) in &lt;b>locale e in cloud&lt;/b>?</string>
     <string name="confirm_delete_has_cloud_image_video">Eliminare %s elemento(i) in &lt;b>cloud&lt;/b>?</string>
     <string name="confirm_delete_has_local_image_video">Eliminare %s elemento(i)?</string>
-    <string name="confirm_delete_pictures">Cancellare %s immagini?</string>
-    <string name="confirm_delete_videos">Cancellare %s video?</string>
-    <string name="confirm_delete_this_picture">Cancellare questa immagine?</string>
-    <string name="confirm_delete_this_video">Cancellare questo video?</string>
     <string name="cancel">Annulla</string>
     <string name="select_all">Seleziona tutto</string>
     <string name="deselect_all">Deseleziona tutto</string>
@@ -599,16 +590,11 @@
     <string name="clear_thumbnail_cache_confirm">La cache delle anteprime verrà cancellata. La Galleria eseguirà una nuova scansione media e ricreerà le anteprime.</string>
     <string name="cleaning_cache">Cancellazione cache…</string>
     <string name="seconds">" secondi"</string>
-    <string name="screensaver_category">Screensaver</string>
     <string name="screensaver_activate_mode">Screensaver</string>
-    <string name="screensaver_activate_only_charging">Attiva solo in carica</string>
-    <string name="screensaver_path">"Album: "</string>
-    <string name="screensaver_path_not_set">Non impostato</string>
+    <string name="screensaver_activate_only_charging">Solo durante la carica</string>
     <string name="set_screensaver_path_title">Screensaver</string>
     <string name="set_screensaver_path_message">Questo album verrà visualizzato 5 secondi dopo lo spegnimento dello schermo.</string>
     <string name="set_screensaver_path_message_if_only_charging">Le immagini in questo album verranno mostrate nello screensaver solo quando il telefono sarà in carica.</string>
-    <string name="slideshow_time_select_title">Seleziona la durata della presentazione</string>
-    <string name="slideshow_time_title">Durata presentazione</string>
     <string name="there_is_no_image">Nessuna immagine</string>
     <string name="preparing_data_to_delete">"Preparazione all'eliminazione dell'immagine…"</string>
     <string name="rename_failed">Impossibile rinominare</string>
@@ -695,6 +681,15 @@
     <string name="add_to_cloud_failed_message_with_count">Impossibile aggiungere %s elemento(i) agli album cloud</string>
     <string name="add_to_cloud_reasons" />
     <string name="add_to_cloud_unknow_reasons">Si è verificato un errore sconosciuto</string>
+    <string name="add_to_secret_successfully_message">"Aggiunto all'album segreto"</string>
+    <string name="add_to_secret_failed_message_with_count">%2$s elementi non possono essere aggiunti: %1$s.</string>
+    <string name="remove_from_secret_successfully_message">"Rimuovi dall'album segreto"</string>
+    <string name="remove_from_secret_failed_message_with_count">%2$s elementi non possono essere rimossi: %1$s."</string>
+    <string name="add_to_cloud_unfinished_message_with_count">%1$s elementi non aggiunti al cloud</string>
+    <string name="add_to_secret_unfinished_message_with_count">"%1$s elementi non aggiunti all'album segreto"</string>
+    <string name="remove_from_secret_unfinished_message_with_count">%"1$s elementi non sono stati rimossi dall'album segreto"</string>
+    <string name="alert_secret_album_title">Album Segreto</string>
+    <string name="alert_secret_album_message">"Puoi scorrere l'album cloud nell'album segreto."</string>
     <string name="cant_delete_cloud_album">Impossibile eliminare: %s è un album di sistema oppure è condiviso con altri utenti.</string>
     <string name="cannot_delete_sharer_photo">Impossibile eliminare %s elemento(i) caricati da altri utenti.</string>
     <string name="share_album">Condividi album</string>
@@ -756,7 +751,6 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="albumset_page_title_separator"> | </string>
     <string name="cloud_tab_all">Tutti</string>
     <string name="cloud_tab_albums">Album</string>
-    <string name="cloud_tab_locations">Posizioni</string>
     <string name="cloud_album_set_create">Nuovo</string>
     <string name="cloud_album_set_scan_qr_code">Codice QR</string>
     <string name="scan_qr_code_failure">Impossibile scansionare il codice QR.</string>
@@ -871,7 +865,6 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="androidesk_wallpapers">Android Desk Wallpapers</string>
     <string name="dcim_opaipic">Opaipic</string>
     <string name="mtxx">MTXX</string>
-    <string name="miliao_saved">Mi Talk</string>
     <string name="tencent_qq_hd_pic">QQ HD</string>
     <string name="immomo_camera">Immomo</string>
     <string name="weikan_weikan">Weikan TV</string>
@@ -892,12 +885,20 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="baidu_bdmobile_downloads">Baidu Mobile</string>
     <string name="tieba">Tie Ba</string>
     <string name="yellow_page">Cartella</string>
+    <string name="sdcard_root">Root scheda SD</string>
+    <string name="internal_sdcard_root">Root scheda SD interna</string>
+    <string name="external_sdcard_root">Root scheda SD esterna</string>
+    <string name="weixin">WeChat</string>
     <string name="miui_wallpaper">Sfondo</string>
     <string name="wandoujia">SnapPea</string>
+    <string name="pocket_camera_picture">Immagini Pocket Camera</string>
+    <string name="pocket_camera_video">Video Pocket Camera</string>
+    <string name="yunyi_pocket_camera">Pocket Camera</string>
     <string name="picker_tab_photo">Foto</string>
     <string name="picker_no_items_selected">Nessuna selezione</string>
     <string name="picker_select_album_title_empty">Seleziona un album</string>
     <string name="picker_no_album_selected">Nessun album selezionato</string>
+    <string name="pick_with_limited_upper_bound_title">Puoi selezionare %d elementi</string>
     <string name="download">Download</string>
     <string name="confirm_download">Devi scaricare %s. Questo suggerimento non verrà più visualizzato.</string>
     <string name="download_fail">Download fallito!</string>
@@ -924,9 +925,28 @@ il dispositivo"</string>
     <string name="ubifocus_guide_text">Tocca e rilascia per riorientare</string>
     <string name="priority_storage">Salva sulla scheda SD</string>
     <string name="priority_storage_summary">Quando la scheda SD è inserita, scarica automaticamente i file sulla SD.</string>
+    <string name="abandon">Annulla</string>
+    <string name="paint_cancel_title">Annulla modifiche</string>
+    <string name="paint_cancel_context">Uscire ed annullare le modifiche a questa immagine?</string>
+    <string name="paint_crop_cancel_title">Annulla modifiche</string>
+    <string name="paint_crop_cancel_context">Vuoi salvare il risultato tagliato?</string>
+    <string name="do_not_save">Non salvare</string>
+    <string name="photo_paint_crop">Taglia</string>
+    <string name="free">Libero</string>
+    <string name="square">Quadrato</string>
+    <string name="original_scale">Scala originale</string>
     <string name="impunity_declaration_title">Notizie di rete</string>
     <string name="impunity_declaration">La galleria può connettersi alla rete dati per fornire alcuni servizi. Vuoi continuare?</string>
     <string name="impunity_declaration_ignore">Non chiedere più</string>
     <string name="impunity_declaration_settings">Mostra notizie di rete</string>
     <string name="impunity_declaration_summary">"Mostra le notizie di rete ogni volta che si avvia l'applicazione galleria"</string>
+    <string name="auto_upload_title">Carica automaticamente</string>
+    <string name="select_auto_upload_albums">Scegli gli album da caricare sul cloud</string>
+    <string name="auto_upload_tip">"Un album con lo stesso nome verrà creato dopo l'attivazione. L'album con lo stesso nome (inclusi gli album condivisi con altri) verrà unito."</string>
+    <string name="enable">Attiva</string>
+    <string name="same_name_album_exists_alert">"E' già presente un album condiviso con lo stesso nome, vuoi caricare automaticamente le foto in quell'album?"</string>
+    <string name="auto_upload_album_comfirm_to_share">Questo album verrà caricato automaticamente, confermi di volerlo condividere?</string>
+    <string name="picker_tab_local">@string/home_page_tab_local</string>
+    <string name="picker_tab_cloud">@string/home_page_tab_cloud</string>
+    <string name="paint_crop_tips">"Per ottenere un'immagine migliore, prova a posizionare le parti interessanti su di ua griglia di punti e sposta."</string>
 </resources>
