--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -5,6 +5,12 @@
     <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
     <string name="filter_by_size_max">2 MB</string>
     <string name="filter_by_size_min">0 KB</string>
+    <string name="action_item_add">Aggiungi</string>
+    <string name="action_item_send">Invia</string>
+    <string name="action_item_remove">Rimuovi</string>
+    <string name="action_item_delete">Elimina</string>
+    <string name="action_item_add_to_current_playlist">Playlist attuale</string>
+    <string name="action_item_add_to_new_playlist">Nuova</string>
     <string name="music_browser_label">Musica</string>
     <string name="unknown_artist_name">Artista sconosciuto</string>
     <string name="unknown_album_name">Album sconosciuto</string>
@@ -44,14 +50,8 @@
     <string name="eq_preset_format">Preset utente %d</string>
     <string name="eq_preset_hint">Nome preset</string>
     <string name="eq_preset_select">Scegli un preset</string>
-    <string name="action_item_add">Aggiungi</string>
-    <string name="action_item_send">Invia</string>
-    <string name="action_item_remove">Rimuovi</string>
-    <string name="action_item_delete">Elimina</string>
     <string name="action_item_download">Download</string>
-    <string name="action_item_add_to_current_playlist">Playlist attuale</string>
     <string name="action_item_add_to_favorite_playlist">Playlist preferita</string>
-    <string name="action_item_add_to_new_playlist">Nuova</string>
     <string name="online_music">Online</string>
     <string name="my_music">La mia musica</string>
     <string name="fragment_more">Altro</string>
@@ -115,7 +115,6 @@
     <string name="trigger_to_scan_media_library_start">Aggiornamento…</string>
     <string name="trigger_to_scan_media_library_processing">Aggiornamento ancora in corso…</string>
     <string name="trigger_to_scan_media_library_finish">Aggiornamento completato</string>
-    <string name="function_error">Questa funzione non può essere inizializzata</string>
     <string name="music_settings">Musica</string>
     <string name="network_traffic">Traffico di rete</string>
     <string name="avoid_to_use_traffic_summary">"Mostra avvisi sull'utilizzo dei dati"</string>
@@ -125,17 +124,16 @@
     <string name="download_while_playing_title">Scarica durante lo streaming</string>
     <string name="download_auto_after_favorite_summary">Scarica automaticamente i tuoi brani preferiti</string>
     <string name="download_auto_after_favorite_title">Scarica i preferiti</string>
-    <string name="download_auto_settings">Impostazioni download</string>
-    <string name="download_auto_settings_summary">Queste impostazioni si applicano solo ai brani segnati come preferiti</string>
-    <string name="download_auto_network_settings">Impostazioni download</string>
     <string name="download_auto_when_free_network">Scarica i brani solo quando connesso via Wi-Fi</string>
+    <string name="download_auto_when_free_network_summary">Impostazioni aggiuntive per i brani preferiti</string>
     <string name="download_auto_when_all_network">Scarica i brani sia tramite rete mobile che via Wi-Fi</string>
-    <string name="download_auto_default_quality">Qualità audio</string>
-    <string name="download_auto_quality_alert_title">Qualità audio per il download</string>
+    <string name="download_auto_quality_alert_title">Qualità musica</string>
     <string name="download_auto_quality_alert_sub_title_for_expired">"Il tuo periodo di prova o il tuo abbonamento sono scaduti. Prego selezionare un'altra qualità audio."</string>
     <string name="download_auto_quality_alert_sub_title_for_login">Per attivare questa impostazioni, accedi al tuo account Mi ora.</string>
     <string name="download_auto_cancel">Lo scaricamento dei preferiti è disattivato</string>
     <string name="download_auto_message">I brani che hai segnato come preferiti saranno scaricati automaticamente quando sei connesso via Wi-Fi. Puoi cambiare questa impostazione nelle impostazioni Account nella scheda Locale"</string>
+    <string name="download_quality">Qualità download</string>
+    <string name="download_quality_summary">Impostazioni aggiuntive per i brani scaricati</string>
     <string name="i_know">Ho capito</string>
     <string name="list_item_play_all_tracks">Tocca per riprodurre tutte le tracce</string>
     <string name="go_to_add_music">Agginggi brani~</string>
@@ -223,7 +221,6 @@
     <string name="priority_storage">Usa scheda SD esterna</string>
     <string name="priority_storage_summary">Scarica automaticamente su scheda SD esterna, se disponibile</string>
     <string name="headset_settings">Impostazioni cuffie</string>
-    <string name="no_local_source_find">File non trovato</string>
     <string name="music_filter">Filtra file audio</string>
     <string name="filter_by_size">Per dimensione</string>
     <string name="filter_by_size_summary">Non mostrare brevi file audio</string>
@@ -234,6 +231,33 @@
     <string name="filter_by_duration_min">0 sec</string>
     <string name="filter_by_duration_max">5 min</string>
     <string name="filter_by_duration_format">%2$dm %5$2ds</string>
-    <string name="max_sleep_time">90</string>
-    <string name="min_sleep_time">1</string>
+    <string name="no_local_source_find">Brano non trovato</string>
+    <string name="start_to_play">Avvia</string>
+    <string name="modify_song_info">Modifica informazioni brano</string>
+    <string name="song_name">Brano</string>
+    <string name="artist_name">Artista</string>
+    <string name="album_name">Album</string>
+    <string name="lyric">Testi</string>
+    <string name="click_modify">Tocca per modificare i testi</string>
+    <string name="select_album">Seleziona album</string>
+    <string name="select_lyric">Seleziona testi</string>
+    <string name="search_album">Cerca album online</string>
+    <string name="search_lyric">CErca testi online</string>
+    <string name="select_local_album">Seleziona album locale</string>
+    <string name="select_local_lyric">Seleziona testi in locale</string>
+    <string name="please_search_or_select">Cerca e seleziona</string>
+    <string name="in_searching_please_wait">Ricerca in corso, attendere...</string>
+    <string name="no_file_picker_find">File Manager non installato sul telefono</string>
+    <string name="set_lyric_successful">Impostazione testi completata</string>
+    <string name="set_album_successful">Impostazione album completata</string>
+    <string name="set_id3_successful">Informazioni brano impostate correttamente</string>
+    <string name="set_id3_failed">Impostazione informazioni brano fallita</string>
+    <string name="listview_index_of_total">%1$d/%2$d</string>
+    <string name="lyric_setting">Impostazioni testi</string>
+    <string name="modify_lyric">Modifica testi</string>
+    <string name="modify_progress">Modifica scorrimento testi</string>
+    <string name="modify_progress_helper">Scorri in alto o in basso per regolare lo scorrimento del testo</string>
+    <string name="lyric_is_empty">Testo vuoto o non disponibile!</string>
+    <string name="format_not_support">Formato non valido, impossibile impostare.</string>
+    <string name="no_introduction">Nessun riepilogo</string>
 </resources>
