--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -619,20 +619,20 @@
     <string name="auto_handle_title">GENERAL</string>
     <string name="manual_handle_title">AVAILABLE FEATURES</string>
     <string name="manual_item_white_list_title">Eccezioni</string>
-    <string name="manual_item_white_list_summary">Prevent selected apps from being optimized</string>
-    <string name="delete_from_manual_item_white_list">Remove from exceptions</string>
-    <string name="manual_white_list_header">%d exceptions</string>
-    <string name="button_text_ignore">Ignore</string>
-    <string name="button_text_ignore_alert_title">Ignore this alert?</string>
-    <string name="back">Back</string>
-    <string name="empty_title_manual_item_white_list">No exceptions.</string>
+    <string name="manual_item_white_list_summary">Evita che le app selezionate vengano ottimizzate</string>
+    <string name="delete_from_manual_item_white_list">Rimuovi dalle eccezioni</string>
+    <string name="manual_white_list_header">%d eccezioni</string>
+    <string name="button_text_ignore">Ignora</string>
+    <string name="button_text_ignore_alert_title">Ignorare questo avviso?</string>
+    <string name="back">Indietro</string>
+    <string name="empty_title_manual_item_white_list">Nessuna eccezione.</string>
     <string name="title_cloud_account">Mi Account</string>
-    <string name="summary_cloud_account">Get the most out of your Mi device</string>
+    <string name="summary_cloud_account">Ottieni il massimo dal tuo Dispositivo Mi</string>
     <string name="title_cloud_service">Mi Cloud</string>
-    <string name="summary_cloud_service">Sync your photos, contacts, and more across all your devices</string>
-    <string name="title_power_optimizer">Battery saver</string>
-    <string name="summary_power_optimizer">"Reduce your device's performance when battery is low"</string>
-    <string name="title_data_flow">Set a data usage warning</string>
+    <string name="summary_cloud_service">Sincronizza le tue foto,i contatti e molto altro su tutti i tuoi dispositivi</string>
+    <string name="title_power_optimizer">Risparmio batteria</string>
+    <string name="summary_power_optimizer">Riduci le prestazioni del tuo dispositivo quando la batteria è scarica</string>
+    <string name="title_data_flow">"Imposta un avviso per l'utilizzo dei dati"</string>
     <string name="summary_data_flow">"Avoid going over your carrier plan's monthly data limit"</string>
     <string name="title_telecom_operator">"Use carrier's accounting"</string>
     <string name="summary_telecom_operator">Get your monthly data usage stats from your carrier</string>
