--- a/Italian/main/AntiSpam.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiSpam.apk/res/values-it/strings.xml
@@ -211,6 +211,7 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="backsound_set_hint">Impostare %s come sottofondo?</string>
     <string name="menu_report_block">Segna come spam</string>
     <string name="st_sub_title_customize_mode_name">Nome modalità</string>
+    <string name="read_all_sms">Segna come già letto</string>
     <string name="st_title_open_antispam">Attiva filtro</string>
     <string name="st_title_antispam_mode">Regole</string>
     <string name="st_sub_title_whiteblack_list_group">Filtro</string>
