--- a/Italian/main/MiuiKeyguard.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiKeyguard.apk/res/values-it/strings.xml
@@ -49,4 +49,6 @@
     <string name="missed_call_text">%d chiamate perse</string>
     <string name="wrong_password">Password non corretta</string>
     <string name="keyguard_torch_cover_text">Premi a lungo il tasto accensione per tenere accesa la Torcia</string>
+    <string name="confirm_pin_msg">Inserisci di nuovo PIN</string>
+    <string name="invalid_confirm_pin_hint">I PIN non corrispondono</string>
 </resources>
